# AstralReign

./: .gitignore  AstralReign.sln  AstralReign.vcxproj  AstralReign.vcxproj.filters  CMakeLists.txt  CMakePresets.json  README.md  config.txt  imgui.ini  main.cpp
config/: assets.json  config.json
libraries/sfml/include/SFML/System/: Exception.hpp
src/: Action.cpp  Action.h  Animation.cpp  Animation.h  Assets.cpp  Assets.h  Components.hpp  ConfigManager.cpp  ConfigManager.h  GameEngine.cpp  GameEngine.h  Logger.h  Physics.cpp  Physics.h  RandomUtils.cpp  RandomUtils.hpp  Scene.cpp  Scene.h  Scene_Galaxy.cpp  Scene_Galaxy.h  Scene_Menu.cpp  Scene_Menu.h  main.cpp
